# ai-playground

clap/backends/clap-2t-fastapi/: .gitignore  docker-compose.yaml
clap/backends/clap-2t-fastapi/docs/: load-test-comparison.md  load-test-results.md
clap/backends/clap-2t-fastapi/gateway/: Dockerfile  pyproject.toml
clap/backends/clap-2t-fastapi/gateway/app/: config.py  main.py  model_client.py
clap/backends/clap-2t-fastapi/gateway/app/routers/: embed.py
clap/backends/clap-2t-fastapi/gateway/k8s/: deployment.yaml  ingress.yaml  service.yaml
clap/backends/clap-2t-fastapi/model/: Dockerfile  pyproject.toml
clap/backends/clap-2t-fastapi/model/app/: main.py  model.py  schemas.py
clap/backends/clap-2t-fastapi/model/app/routers/: infer.py
clap/backends/clap-2t-fastapi/model/k8s/: deployment.yaml  service.yaml
clap/backends/clap-fastapi/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
clap/backends/clap-fastapi/app/: main.py  schemas.py
clap/backends/clap-fastapi/app/routers/: embed.py
clap/backends/clap-fastapi/docs/: audio-embedding-test-report.md  audio-preprocessing.md  embedding-test-report.md  k6-load-test-no-sleep-report.md  k6-load-test-report.md  k6-stress-test-report.md
clap/backends/clap-fastapi/k6/: load-test-audio.js  load-test-text.js  load-test.js  stress-test.js
clap/backends/clap-fastapi/k8s/: deployment.yaml  ingress.yaml  service.yaml
clap/backends/clap-fastapi/scripts/: download_gtzan_samples.py  test_audio_determinism.py  test_music_embeddings.py
clap/backends/clap-triton/: .dockerignore  .gitignore  pyproject.toml
clap/backends/clap-triton/app/: main.py  triton_client.py
clap/backends/clap-triton/app/routers/: embed.py
clap/backends/clap-triton/docker/: Dockerfile.api  Dockerfile.triton  docker-compose.yaml
clap/backends/clap-triton/docs/: load-test-comparison.md  load-test-results.md
clap/backends/clap-triton/docs/history/: implementation-log.md
clap/backends/clap-triton/k6/: load-test-audio.js  load-test-text.js
clap/backends/clap-triton/k8s/: api-deployment.yaml  api-service.yaml  ingress.yaml  triton-deployment.yaml  triton-service.yaml
clap/backends/clap-triton/scripts/: export_audio_model.py  export_text_model.py  verify_triton.py
clap/backends/clap-triton/triton/model_repository/clap_audio/: config.pbtxt
clap/backends/clap-triton/triton/model_repository/clap_audio/1/: model.py
clap/backends/clap-triton/triton/model_repository/clap_text/: config.pbtxt
clap/backends/fastapi-test/: .gitignore  README.md  pyproject.toml
clap/backends/triton-from-ubuntu/: Dockerfile  docker-compose.yaml  serve.py
gemma3n-test/: .gitignore  README.md  pyproject.toml  run.sh
gemma3n-test/backend/: __init__.py  main.py
gemma3n-test/frontend/: index.html  package-lock.json  package.json
gemma3n-test/frontend/src/: App.css  App.tsx  api.ts  index.css
langchain-scratch/: .gitignore  README.md  pyproject.toml
langchain-scratch/notebooks/: 02-llm-langchain-ollama.ipynb  03-langchain-style-prompt.ipynb  04-control-output-structure.ipynb  05-LCEL-chain.ipynb  06-summary-tip.ipynb  07-more-langchain.ipynb
langgraph-streamlit/: .gitignore  README.md  graph.py  main.py  pyproject.toml
langgraph-streamlit/notebooks/: langgraph-draw.ipynb  langgraph-state-check.ipynb
langgraph-streamlit/tools/: __init__.py  higgsfield.py
llm-scratch/: .gitignore  CLAUDE.md  README.md  pyproject.toml
llm-scratch/notebooks/: test.ipynb
llm-scratch/notebooks/ch02/: practice.ipynb
llm-scratch/notebooks/ch03-attention/: practice.ipynb
music-rag/: .env  .gitignore  app.py  main.py  pyproject.toml  requirements.txt
music-rag/notebooks/: embedding.ipynb  extract_query.ipynb  supabase_load.ipynb  supabase_test.ipynb  visualize.ipynb
music-rag/notebooks/laion_clap/: embedding.ipynb  extract_query.ipynb  visualize.ipynb
music-rag/notebooks/muq_mulan/: embedding_query.ipynb
music-rag/notebooks/supabase/: supabase_test.ipynb
music-rag/pages/: 1_🎯_Embedding.py  2_🎵_Music_Player.py  3_🔍_Text_Query.py  4_📊_Visualization.py  5_🤖_AI_Search.py  6_🎹_MuQ_Embedding.py  7_🔎_MuQ_Text_Query.py  8_📈_MuQ_Visualization.py  9_🤖_MuQ_AI_Search.py
n8n-langgraph-course/: .gitignore  CLAUDE.md  main.py  pyproject.toml
n8n-langgraph-course/app/: chat.py
n8n-langgraph-course/milvus/: docker-compose.yml
n8n-langgraph-course/scripts/: embed_to_milvus.py  pdf_to_md.py  rag_search.py
n8n/n8n-docker-compose/: .env  README.md  TROUBLESHOOTING.md  docker-compose.yml  update-ollama-host.sh
rag-scratch/: .gitignore  pyproject.toml
rag-scratch/notebooks/: 02-02-embedding.ipynb  03-01-llm.ipynb  03-02-chroma-rag.ipynb  03-03-no-langchain.md
(+9 files in other folders)
