[project]
name = "langchain-scratch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.10",
    "langchain-anthropic>=1.0.2",
    "langchain-ollama>=1.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]
