[project]
name = "music-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "librosa>=0.11.0",
    "plotly>=6.0.1",
    "streamlit>=1.52.1",
    "supabase>=2.24.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
