[project]
name = "music-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.8",
    "langchain>=1.1.3",
    "langchain-anthropic>=1.2.0",
    "librosa>=0.11.0",
    "muq>=0.1.0",
    "nbformat>=5.10.4",
    "plotly>=6.0.1",
    "streamlit>=1.52.1",
    "supabase>=2.24.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
