[project]
name = "n8n-langgraph-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-milvus>=0.3.3",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "ollama>=0.6.1",
    "pymilvus>=2.6.9",
    "pymupdf4llm>=0.2.9",
    "streamlit>=1.54.0",
]
