[project]
name = "clap-2t-gateway"
version = "0.1.0"
description = "CLAP embedding gateway service (Tier 1)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]
