[project]
name = "clap-2t-model"
version = "0.1.0"
description = "CLAP model inference service (Tier 2)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "laion-clap>=1.1.4",
    "numpy>=1.24.0",
]
